--- a/scss/filebar.scss
+++ b/scss/filebar.scss
@@ -41,13 +41,13 @@
 }
 
 /* The dropdown container */
-.dropdown {
+.filebar .dropdown {
   float: left;
   overflow: hidden;
 }
 
 /* Dropdown button */
-.dropdown .dropbtn {
+.filebar .dropdown .dropbtn {
   font-size: 14px;
   border: none;
   outline: none;
@@ -67,7 +67,7 @@
 }
 
 /* Dropdown content (hidden by default) */
-.dropdown-content {
+.filebar .dropdown-content {
   display: none;
   position: absolute;
   background-color: $dropdown-background-color;
@@ -78,7 +78,7 @@
 }
 
 /* Links inside the dropdown */
-.dropdown-content a {
+.filebar .dropdown-content a {
   float: none;
   color: $primary-text-color;
   /* padding: 12px 16px; */
@@ -88,12 +88,12 @@
 }
 
 /* Add a grey background color to dropdown links on hover */
-.dropdown-content a:hover {
+.filebar .dropdown-content a:hover {
   background-color: $dropdown-hover-color;
   border-radius: 6px;
 }
 
 /* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {
+.filebar .dropdown:hover .dropdown-content {
   display: block;
 }
